# xcfun

./: .azure-pipelines.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  setup
.ci/: cmake.sh  macos.yml  windows.yml
api/: CMakeLists.txt  xcfun.h
cmake/: autocmake.yml
cmake/downloaded/: autocmake_default_build_paths.cmake
examples/CXX_host/: example.cpp
python/: CMakeLists.txt  export_xcfun.cpp
src/: CMakeLists.txt  XCFunctional.cpp  config.hpp  densvars.hpp  error_handling.hpp  utils.hpp  xcint.cpp  xcint.hpp
tests/: CMakeLists.txt
